Changelog for Shake (* = breaking change)

    Make the Shake database version string contain os and arch
    Don't delete the whole database when an oracle disappears
    #300, soften the database version change message
    IMPORTANT: Incompatible on disk format change
    #590, print "Build completed" timing with better accuracy
    #581, improve the information and display of call stacks
    Add actionRetry to retry actions if they fail
    #143, give locations when several rules match
    Compatibility with unix-2.8
    Add shakeShare, --share and history functions for shared builds
    #574, extensive documentation of Development.Shake.Rule
*   Change how alternative and priority rules interact
    Add versioned for rules
*   Change all the ways of obtaining user rules, see getUserRuleOne
    Improve time recording for unsafeExtraThread, parallel, batch
    #553, improve file-hash performance when nothing changes
*   Require addBuiltinRule to take a BuiltinIdentity argument
*   Make the third argument to BuiltinRun a real ADT
    Disable all the lintTrack functions unless lint is enabled
*   Change the Development.Shake.Rule.track* functions to lintTrack*
    #584, add Semigroup/Monoid instances for Action
    Add produces to declare which untracked files a rule produces
    Add historyDisable to note which rules cannot be cached
    #583, add replaceDirectory1
    Add addOracleHash for oracles with reduced storage requirements
0.16.4, released 2018-04-04
    #185, add addOracleCache which doesn't always rerun
    #576, remove incorrect Cabal description
    #575, print --help message at Quiet verbosity or above
0.16.3, released 2018-02-23
    Allow reading data files from next to the executable
    #566, require extra-1.6.1
    #565, deal with multi-file rules that don't create their contents
    Improve the documentation of getDirectoryContents
0.16.2, released 2018-02-13
    Set the correct lower bound on unordered-containers of 0.2.7